fixed errors with exp func

--- a/.gitignore
+++ b/.gitignore
@@ -35,12 +35,25 @@
 *.i*86
 *.x86_64
 *.hex
+vtests_run
+run
+gcov
+unit-test
+main
 
 # Debug files
 *.dSYM/
 *.su
 *.idb
 *.pdb
+*.gcda
+*.gcno
+RESULT_VALGRIND.txt
+sscanf_tests.c
+test_telega.c
+main.c
+report
+report.info
 
 # Kernel Module Compile Results
 *.mod*
